tests/sksl/errors/ArrayOfVoidInStruct.glsl
### Compilation failed:

error: 4: type 'void' may not be used in an array
error: 5: type 'void' may not be used in an array
error: 6: type 'void' may not be used in an array
3 errors
